# persistent-mysql-pure

./: ChangeLog.md  README.md  default.nix  flake.nix  persistent-mysql-pure.cabal  shell.nix  stack-docker.yaml  stack-nightly.yaml  stack.yaml  stack_lts-12.yaml
.github/workflows/: cabal.yaml  nightly.yaml  nix.yaml
example/: Main.hs
nix/: hpkgs.nix
npins/: sources.json
persistent-mysql-haskell/: persistent-mysql-haskell.cabal
persistent-mysql-haskell/Database/Persist/: MySQL.hs
persistent-mysql-haskell/test/: MyInit.hs
persistent-mysql/test/: InsertDuplicateUpdate.hs
src/Database/Persist/: MySQL.hs
test/: InsertDuplicateUpdate.hs  main.hs
