name:            persistent-mysql-pure
version:         1.0.0
license:         MIT
license-file:    LICENSE
author:          Naushadh <naushadh@protonmail.com>, Felipe Lessa <felipe.lessa@gmail.com>, Michael Snoyman
maintainer:      Naushadh <naushadh@protonmail.com>
synopsis:        A pure haskell backend for the persistent library using MySQL database server.
category:        Database, Yesod
cabal-version:   >= 1.10
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/naushadh/persistent/issues
description:
    This package contains a backend for persistent using the
    MySQL database server.  Internally it uses the @mysql-haskell@
    package in order to access the database. See README.md for more.
    .
    This package supports only MySQL 5.1 and above.  However, it
    has been tested only on MySQL 5.5.
    Only the InnoDB storage engine is officially supported.
    .
    Known problems:
    .
    * This package does not support statements inside other
      statements.
extra-source-files: ChangeLog.md, README.md

library
    build-depends:   base                  >= 4.9      && < 4.19
                   , transformers          >= 0.5
                   , persistent            >= 2.10.0   && < 3
                   , containers            >= 0.5
                   , bytestring            >= 0.10.8
                   , text                  >= 1.2
                   , unliftio-core
                   , aeson                 >= 1.0
                   , conduit               >= 1.2.12
                   , resourcet             >= 1.1
                   , monad-logger
                   , resource-pool
                   , mysql-pure            >= 1.0 &&  < 2.0
                   -- keep the following in sync with @mysql-haskell@ .cabal
                   , io-streams            >= 1.2     && < 2.0
                   , time                  >= 1.5.0
                   , network               >= 2.3     && < 4.0
                   , tls                   >= 1.3.5
    exposed-modules: Database.Persist.MySQL
    other-modules:   Database.Persist.MySQLConnectInfoShowInstance
    ghc-options:     -Wall
    default-language: Haskell2010
    hs-source-dirs:    src

executable persistent-mysql-haskell-example
  hs-source-dirs:    example
  main-is:           Main.hs
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:     base                  >= 4.9    && < 5
                   , persistent            >= 2.10.0 && < 3
                   , monad-logger
                   , persistent-mysql-haskell
                   , transformers          >= 0.5

source-repository head
  type:     git
  location: git://github.com/jappeace/persistent-mysql-pure.git

test-suite test
    type:            exitcode-stdio-1.0
    main-is:         main.hs
    hs-source-dirs:  test
    other-modules:   
        MyInit
        InsertDuplicateUpdate
        CustomConstraintTest
        ImplicitUuidSpec
    ghc-options:     -Wall

    build-depends:   
        base             >= 4.9 && < 5
      , aeson
      , bytestring
      , containers
      , fast-logger
      , hspec            >= 2.4
      , http-api-data
      , HUnit
      , monad-logger
      , mysql-pure      >= 0.8
      , path-pieces
      , persistent
      , persistent-mysql-haskell
      , persistent-qq
      , persistent-test
      , QuickCheck
      , quickcheck-instances
      , resourcet
      , text
      , time
      , transformers
      , unliftio-core
    default-language: Haskell2010
